2009-01-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViActions.cs: Add a ToggleCase action.

	* Mono.TextEditor.Vi/ViMode.cs: Implement ~, :$, :0. Make u work while
	there's a selection.

2009-01-13  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Worked on copy operation
	with markup syntax mode.

2009-01-08  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/TextEditor.cs: Don't add/remove bookmarks when
	clicking on the icon bar. It will now add/remove breakpoints.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed Bug 459732 - Cursor placed in
	the wrong position.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed 'Bug 458159 -
	crash when editing javascript'.

2009-01-06  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/ChangeLogSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Span.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed "Bug 457677 -
	Changelog syntax highlighting gets broken when an extra asterisk is
	found".

2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/TextEditorOptions.cs: Cache the font description once
	created.

	* gtk-gui/objects.xml: Updated.

2008-12-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor/DocumentLocation.cs: Fix build for recent mcs
	versions.

2008-12-15  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Fix some actions that're made up of
	sub-actions so that they take place in one atomic undo instead of
	multiple undos. Tweaks to make auto-visual mode work better with
	undo/redo.

	* Mono.TextEditor/EditMode.cs: Add utility method for executing two
	actions in one atomic undo.

2008-12-15  Michael Hutchinson  <mhutchinson@novell.com>
